stats calc import - part2